# phd-rl-algos

./: .gitignore  README.md  check_envs.py  pyproject.toml  requirements.txt  requirements_clean.txt  upgrade_all.py
dqn/jax/: README.MD  agents.py  base_env.py  cartpole.py  dqn_cartpole.ipynb  replay_buffer.py  rollout.py
dqn/opinion_dynamics/: check_experiment.ipynb  dqn.ipynb  models.py  opinion_dqn.py  replay_buffer.py  test_agent_dqn.py
dqn/opinion_dynamics/draw_network/: OpinionNet_model.onnx  conv1d_model.onnx  draw_network.ipynb  net_diagram.md
dqn/opinion_dynamics/experiments/: README.md  agent_eval.ipynb  (+11 more)
dqn/opinion_dynamics_2/: dqn.ipynb
dynamic_programming/: car_rental.ipynb  demo.ipynb  demo_pi_q.ipynb  demo_pi_v.ipynb  demo_vi.ipynb  gridworld_problem.ipynb  policy_iteration.py  utils.py  value_iteration.py  visualize.py
dynamic_programming/car_rental/: car_rental.ipynb  car_rental_modified.ipynb  view.py
dynamic_programming/gambler_problem/: gambler.ipynb  reference_demo.ipynb  view.py
dynamic_programming/grid_worlds/: demo_pi_q.ipynb  demo_pi_v.ipynb  demo_vi.ipynb  gridworld_problem.ipynb  visualize.py
dynamic_programming/opinion_dynamics/: algo_infinite_horizon.py  algos.py  archive1  dqn.ipynb  gn_fine_dp.ipynb  gn_finite_horizon_long_campaign.ipynb  gn_finite_horizon_long_campaign_fine_dp.ipynb  gn_finite_horizon_long_campaign_fine_dp_final_state_obj.ipynb  gn_infinite_horizon_long_campaign.ipynb  graph_network_problem.ipynb  value_iteration.py  viz.py
exploration_strategies/: demo_exploration.ipynb  exploration_strategies.py
(+48 files in other folders)
