[tool.poetry]
name = "phd-rl-algos"
version = "0.1.0"
description = "A collection of RL related algorithms"
authors = ["mariusdgm <marius.dragomir.dgm@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rl-envs-forge = "^4.17.0"
jax = {extras = ["cpu"], version = "^0.4.25"}
jax-tqdm = "^0.1.2"
dm-haiku = "^0.0.12"
plotly = "^5.20.0"
nbformat = "^5.10.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
